--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>404</title>
+    <title>404 Error</title>
     <link rel="icon" href="/web-server/public/img/weather.png">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
